<resources>
    <string name="cd_back">Volver</string>
    <string name="title_mi_ganado">MI GANADO</string>

    <string name="ceba">CEBA</string>
    <string name="levante">LEVANTE</string>
    <string name="cria">CRÍA</string>

    <string name="registrar">Registrar</string>
    <string name="lotes">Lotes</string>
    <string name="salida">Salida</string>
    <string name="analitica">Analítica</string>
    <string name="madre">Madre</string>
    <string name="nacimiento">Nacimiento</string>

    <string name="cd_bg_ceba">Imagen de ceba</string>
    <string name="cd_bg_levante">Imagen de levante</string>
    <string name="cd_bg_cria">Imagen de cría</string>

    <string name="nav_home">Inicio</string>
    <string name="nav_ganado">Ganado</string>
    <string name="nav_compra">Compra</string>
    <string name="nav_agenda">Agenda</string>
    <string name="nav_perfil">Perfil</string>
    <string name="cr_a">CRÍA</string>
    <string name="mi_ganado">MI GANADO</string>
    <string name="black" />
    <string name="hatodato">HATODATO</string>
    <string name="bienvenido">bienvenido</string>
    <string name="somos_hatodato">somos hatodato</string>
    <string name="tu_mejor_compa_ero_con_bovinos">¡Tu mejor compañero con bovinos!</string>
    <string name="marketplace">Marketplace</string>
    <string name="comprador">Comprador</string>
    <string name="buscar">Buscar</string>
    <string name="premiun">Premiun</string>
    <string name="la_mejor_calida_del_mercado_solo_aqu">La mejor calida del mercado. Solo aquí</string>
    <string name="cd_banner_prod" />
    <string name="categorias">Categorias</string>
    <string name="ver_m_s">Ver más</string>
    <string name="medicinas">Medicinas</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="cd_prod_1" />
    <string name="comprar">Comprar</string>
    <string name="cd_prod_2" />
    <string name="suplementos">Suplementos</string>
    <string name="comida">Comida</string>
    <string name="otros">Otros</string>
    <string name="cd_ganadero" />
    <string name="cd_vendedor" />
    <string name="registrar_nuevo_lote">Registrar nuevo lote</string>
    <string name="lote_1">Lote 1</string>
    <string name="peso">Peso</string>
    <string name="_612_kg">612 kg</string>
    <string name="edad">Edad</string>
    <string name="_54_meses">54 meses</string>
    <string name="cantidad">Cantidad</string>
    <string name="cabezas_lote_1">26 cabezas</string>
    <string name="fecha_meta_embarque">Fecha de embarque</string>
    <string name="lote_2">Lote 2</string>
    <string name="lote_3">Lote 3</string>
    <string name="registrar_comida">Regstrar comida</string>
    <string name="registrar_muerte">Registrar muerte</string>
    <string name="historial_comida">Historial comida</string>
    <string name="nuevo_lote">NUEVO LOTE</string>
    <string name="proposito_ceba">Propósito: CEBA</string>
    <string name="hint_ingrese_nombre">Ingresar nombre</string>
    <string name="hint_fecha">Fecha de embarque</string>
    <string name="hint_comentarios">Comentarios adicionales</string>
    <string name="dar_salida_lote">Dar salida lote</string>
    <string name="salida_lote">SALIDA LOTE</string>
    <string name="dar_salida_a_lote">Dar salida al lote</string>
    <string name="hint_nombre_lote">Número del lote</string>
    <string name="hint_peso_total_lote">Peso total del lote</string>
    <string name="hint_comentarios_op">Comentarios</string>
    <string name="btn_dar_salida">Dar salida</string>
    <string name="hint_fechas_op">Fecha de salida</string>
    <string name="salida_completada">Salida completada</string>
    <string name="resumen_de_lote">Resumen del lote</string>
    <string name="inicio_lote_ceba">Incio ciclo del lote ceba</string>
    <string name="final_lote_ceba">Fin ciclo del lote ceba</string>
    <string name="volver_a_mi_ganado">Volver a \"Mi Ganado\"</string>
    <string name="fecha">Fecha</string>
    <string name="consumo_por_lote">Consumo por lote</string>
    <string name="costos_alimentacion">Costo del alimento</string>
    <string name="tiempo_promedio_venta">Promedio de ventas</string>
    <string name="peso_objetivo_450">450 KG</string>
    <string name="meses">Meses</string>
    <string name="total">Total</string>
    <string name="forraje">Forraje</string>
    <string name="concentrado">Concentrado</string>
    <string name="hint_id_animal">ID animal</string>
    <string name="hint_genero_animal">Genero animal</string>
    <string name="hint_raza">Raza</string>
    <string name="suf_meses">Edad</string>
    <string name="hint_peso">Peso</string>
    <string name="hint_lote">Lote</string>
    <string name="calendario">CALENDARIO</string>
    <string name="tipo_de_evento">Tipo de evento</string>
    <string name="proximos_eventos">Proximos eventos</string>
    <string name="no_hay_eventos">No hay eventos</string>
    <string name="nuevo_evento">Nuevo evento</string>
    <string name="cd_mes_siguiente">Mes siguiente</string>
    <string name="cd_mes_anterior">Mes anterior</string>
    <string name="producto">Producto</string>
    <string name="hint_nombre_producto">Nombre del producto</string>
    <string name="hint_cantidad_trae">Cantidad que trae del producto</string>
    <string name="suf_unidades">unidades</string>
    <string name="hint_stock_inicial">cantidad inicial</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_descripcion_op">Descripción</string>
    <string name="cargar_imagen">Cargar imagen</string>
    <string name="ingrese_imagen">Insertar imagen</string>
    <string name="cd_imagen_producto">Imagen del producto</string>
</resources>
